Change H1 to H2, add <p>

--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
     <title>Git & Github Tutorial</title>
 </head>
 <body>
-    <h1> 10 lệnh Git cơ bản mà Khôi cần biết liền :v</h1>
+    <h2> 10 lệnh Git cơ bản mà Khôi cần biết liền :v</h2>
+    <p>Hướng dẫn chi tiết cách sử dụng git và các lệnh git cơ bản</p>
 </body>
 </html>
