Test Status Added

--- a/test.html
+++ b/test.html
@@ -8,5 +8,6 @@
 <body>
     <h2> 10 lệnh Git cơ bản mà Khôi cần biết liền :v</h2>
     <p>Hướng dẫn chi tiết cách sử dụng git và các lệnh git cơ bản</p>
+    <span>Test git status</span> 
 </body>
 </html>
